--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "2.8.5",
     "express": "4.18.2",
     "http-status": "1.7.0",
+    "mongodb": "6.1.0",
     "winston": "3.10.0"
   },
   "devDependencies": {
